[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "algoandds"
version = "0.1.0"
description = "A library with common algorithms and data structures."
authors = ["Vitor Centeio <vitor.centeio@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
python-dotenv = "^0.19.2"
safety = "^1.10.3"
mypy = "^0.931"
flake8 = "^4.0.1"
black = "^21.12b0"
bandit = "^1.7.1"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
tox = "^3.24.5"
